@@ -5,6 +5,7 @@
 - fixed: character conversion when reading characters from id3 tags (using fromLocal8Bit on reading tags)
 - fixed: deleting files (moving to trash dir) if moving across partitions (thanks to Bernhard)
 - fixed: deadlock when closing yammi while initialization
+- fixed: context menu -> "go to album" for compilations with different artists
 - improved: application icon (thanks to Alessandro)
 
 
